chore: re-design payroll database
